# wps-plugins

./: .gitignore  BUILD_QUICK.md  CODE_SIGNING_GUIDE.md  DEV_GUIDE.md  Makefile  PACKAGE_INFO.md  README.md  WINDOWS_BUILD.md  build-all.sh  build-windows.bat  clearWpsCache.bat  components.d.ts  environment.bat  index.html  macOS-使用指南.md  package-lock.json  package.json  start-dev-windows.bat  start-dev.sh  test_hosts.sh  vite.config.js
.github/workflows/: build-release.yml  build.yml
build-mac/: build.sh
build-windows/: SCRIPT_OVERVIEW.md  WINDOWS_SCRIPT_GUIDE.md  quick-build-windows.bat  setup-and-build-windows.bat
src/: App.vue  fastflex.scss  main.js  reset.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs  wps_config.rs
